<resources>
    <string name="app_name">Green Fluidics</string>
    <string name="wakeme">#WEMAKEITFLOW</string>
    <string name="inic">Iniciar sesión</string>
    <string name="cambio">Tú generas el cambio</string>
    <string name="label_regiter">Ingresa en los siguientes campos los datos personales:</string>
    <string name="label_name">Nombre</string>
    <string name="label_ApP">Apellido Paterno</string>
    <string name="label_ApM">Apellido Materno</string>

    <string name="label_emai">Email</string>
    <string name="label_pass">Contraseña</string>
    <string name="registro">Registro</string>

    <string name="label_inicio">Ingresar</string>
    <string name="label_regis">Registrarse</string>

    <string name="derechos">Todos los derechos reservados, GREENfluidics® 2019. </string>
    <string name="DescImag">I</string>
    <string name="title_activity_menu_lateral">MenuLateral</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Green Fluidics</string>
    <string name="nav_header_subtitle">Hola, Bienvenido</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="electrical">          Electricidad</string>
    <string name="temperature">Temperatura</string>
    <string name="oxigen">Oxigeno</string>
    <string name="dioxi">Dioxido</string>
    <string name="temp">19°</string>
    <string name="dio">20gr</string>
    <string name="oxi">35gr</string>
    <string name="watt">100w</string>
    <string name="linea">______________________________________</string>
    <string name="ultimo">Ultimos 7 días:</string>
    <string name="conoce_energia">Conoce en tiempo real cuanta energia estas generando de manera sustentable</string>
    <string name="conoce_tempe">Conoce en tiempo real cuanta temperatura se encuentra en el panel</string>
    <string name="conoce_dioxido">Conoce en tiempo real cuanto dioxido hay en el ambiente </string>
    <string name="conoce_oxi">Conoce en tiempo real cuanto oxigeno estas generando de manera sustentable</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="details">Detalles</string>
    <string name="parameters">Parámetros</string>


</resources>
